only tx history to go
